--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Allu Cabs Cochin Official | Travel Anywhere In Kerala</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17471402445"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17471402445');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
